syntax = "proto3";

option go_package = "auth/app/proto/pbAuth";

package pbAuth;

service auth {
  rpc SignIn(SignInReq) returns (AuthRes);
  rpc SignUp(SignUpReq) returns (AuthRes);
  rpc RefreshTokens(RefreshTokensReq) returns (RefreshTokensRes);
}

message SignInReq {
  string email = 1; // Электронная почта пользователя
  string password = 2; // Пароль пользователя
  string deviceID = 3; // Идентификатор устройства
}

message SignUpReq {
  string name = 1; // Имя пользователя
  string email = 2; // Электронная почта пользователя
  string password = 3; // Пароль пользователя
  string deviceID = 4; // Идентификатор устройства
}

message RefreshTokensReq {
  string token = 1; // Токен восстановления доступа
}

message Token {
  string accessToken = 1;
  string refreshToken = 2;
}

message AuthRes {
  Token token = 1; // Токены доступа
  uint32 ID = 2; // Идентификатор пользователя
}

message RefreshTokensRes {
  Token token = 1; // Токены доступа
}
